<resources>
    <string name="app_name">SMA</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="alert_dialog">Alert</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>

    <!-- https://vi.wikipedia.org/wiki/B%E1%BA%A3n_m%E1%BA%ABu:K%C3%BD_ki%E1%BB%87u_quy_%C6%B0%E1%BB%9Bc_c%C3%A1c_t%E1%BB%89nh_th%C3%A0nh_Vi%E1%BB%87t_Nam -->
    <string-array name="vietnamese_cities_and_provinces_with_vietnamese_characters">
        <item name="code">AG</item>
        <item name="city">An Giang</item>
        <item name="code">BV</item>
        <item name="city">Bà Rịa-Vũng Tàu</item>
        <item name="code">BG</item>
        <item name="city">Bắc Giang</item>
        <item name="code">BK</item>
        <item name="city">Bắc Kạn</item>
        <item name="code">BL</item>
        <item name="city">Bạc Liêu</item>
        <item name="code">BN</item>
        <item name="city">Bắc Ninh</item>
        <item name="code">BT</item>
        <item name="city">Bến Tre</item>
        <item name="code">BĐ</item>
        <item name="city">Bình Định</item>
        <item name="code">BD</item>
        <item name="city">Bình Dương</item>
        <item name="code">BP</item>
        <item name="city">Bình Phước</item>
        <item name="code">BTh</item>
        <item name="city">Bình Thuận</item>
        <item name="code">CM</item>
        <item name="city">Cà Mau</item>
        <item name="code">CB</item>
        <item name="city">Cao Bằng</item>
        <item name="code">CT</item>
        <item name="city">Cần Thơ</item>
        <item name="code">ĐNa</item>
        <item name="city">Đà Nẵng</item>
        <item name="code">ĐL</item>
        <item name="city">Đắk Lắk</item>
        <item name="code">ĐNo</item>
        <item name="city">Đắk Nông</item>
        <item name="code">ĐB</item>
        <item name="city">Điện Biên</item>
        <item name="code">ĐN</item>
        <item name="city">Đồng Nai</item>
        <item name="code">ĐT</item>
        <item name="city">Đồng Tháp</item>
        <item name="code">GL</item>
        <item name="city">Gia Lai</item>
        <item name="code">HG</item>
        <item name="city">Hà Giang</item>
        <item name="code">HNA</item>
        <item name="city">Hà Nam</item>
        <item name="code">HAN</item>
        <item name="city">Hà Nội</item>
        <item name="code">HT</item>
        <item name="city">Hà Tĩnh</item>
        <item name="code">HD</item>
        <item name="city">Hải Dương</item>
        <item name="code">HP</item>
        <item name="city">Hải Phòng</item>
        <item name="code">HGi</item>
        <item name="city">Hậu Giang</item>
        <item name="code">HB</item>
        <item name="city">Hòa Bình</item>
        <item name="code">SG</item>
        <item name="city">Hồ Chí Minh</item>
        <item name="code">HY</item>
        <item name="city">Hưng Yên</item>
        <item name="code">KH</item>
        <item name="city">Khánh Hòa</item>
        <item name="code">KG</item>
        <item name="city">Kiên Giang</item>
        <item name="code">KT</item>
        <item name="city">Kon Tum</item>
        <item name="code">LC</item>
        <item name="city">Lai Châu</item>
        <item name="code">LĐ</item>
        <item name="city">Lâm Đồng</item>
        <item name="code">LS</item>
        <item name="city">Lạng Sơn</item>
        <item name="code">LC</item>
        <item name="city">Lào Cai</item>
        <item name="code">LA</item>
        <item name="city">Long An</item>
        <item name="code">NĐ</item>
        <item name="city">Nam Định</item>
        <item name="code">NA</item>
        <item name="city">Nghệ An</item>
        <item name="code">NB</item>
        <item name="city">Ninh Bình</item>
        <item name="code">NT</item>
        <item name="city">Ninh Thuận</item>
        <item name="code">PT</item>
        <item name="city">Phú Thọ</item>
        <item name="code">PY</item>
        <item name="city">Phú Yên</item>
        <item name="code">QB</item>
        <item name="city">Quảng Bình</item>
        <item name="code">QNa</item>
        <item name="city">Quảng Nam</item>
        <item name="code">QNg</item>
        <item name="city">Quảng Ngãi</item>
        <item name="code">QN</item>
        <item name="city">Quảng Ninh</item>
        <item name="code">QT</item>
        <item name="city">Quảng Trị</item>
        <item name="code">ST</item>
        <item name="city">Sóc Trăng</item>
        <item name="code">SL</item>
        <item name="city">Sơn La</item>
        <item name="code">TN</item>
        <item name="city">Tây Ninh</item>
        <item name="code">TB</item>
        <item name="city">Thái Bình</item>
        <item name="code">TNg</item>
        <item name="city">Thái Nguyên</item>
        <item name="code">TH</item>
        <item name="city">Thanh Hóa</item>
        <item name="code">TTH</item>
        <item name="city">Thừa Thiên - Huế</item>
        <item name="code">TG</item>
        <item name="city">Tiền Giang</item>
        <item name="code">TV</item>
        <item name="city">Trà Vinh</item>
        <item name="code">TQ</item>
        <item name="city">Tuyên Quang</item>
        <item name="code">VL</item>
        <item name="city">Vĩnh Long</item>
        <item name="code">VP</item>
        <item name="city">Vĩnh Phúc</item>
        <item name="code">YB</item>
        <item name="city">Yên Bái</item>
    </string-array>

    <string name="setting_text_app_version">Thông tin bản cập nhật %1s</string>
    <string name="setting_btn_app_version_lastest">Mới nhất</string>
    <string name="loading_yourid">ID của bạn là: Đang tải ID...</string>
    <string name="setting_active_lock_screen">Kích hoạt màn hình khóa</string>
    <string name="setting_code_gmg">Mã mời bạn bè của bạn là:</string>
    <string name="setting_showlock_screen_wifi">Hiện màn hình khóa khi dùng Wifi</string>
    <string name="setting_showlock_screen_3g">Hiện màn hình khóa khi dùng 3G</string>
    <string name="setting_reward_notice">Thông báo nhận thưởng</string>
    <string name="setting_event_facebook">Gửi app report cho Facebook</string>
    <string name="setting_about_me">Thông tin của tôi</string>
    <string name="setting_cash_out">Đổi điểm</string>
    <string name="setting_point_history">Chi tiết đổi điểm</string>
    <string name="setting_invite_fr">Mời bạn bè</string>
    <string name="setting_invite_code">Nhập mã giới thiệu</string>
    <string name="setting_hobby">Chọn sở thích</string>
    <string name="setting_game">Trò chơi</string>
    <string name="setting_attention">Chú ý</string>
    <string name="setting_qa">Câu hỏi thường gặp</string>
    <string name="setting_tutorial">Hướng dẫn</string>
    <string name="setting_customer_service">Chăm sóc khách hàng</string>
    <string name="setting_contact">Liên hệ</string>
    <string name="setting_term_use">Điều khoản sử dụng</string>
    <string name="voucher_policy">Chính sách mua Voucher</string>
    <string name="setting_security_policy">Chính sách bảo mật</string>
    <string name="setting_delete_account">Xóa tài khoản</string>
    <string name="setting_my_account">Tài khoản</string>
    <string name="sms_register_header_title">Đăng nhập</string>
    <string name="setting_province">Tỉnh thành</string>
    <string name="setting_none_select">Chưa chọn</string>
    <string name="setting_sex">Giới tính</string>
    <string name="setting_male">Nam</string>
    <string name="setting_female">Nữ</string>
    <string name="setting_birthday">Năm sinh</string>
    <string name="setting_stt">TT.Hôn nhân</string>
    <string name="setting_single">Độc thân</string>
    <string name="setting_married">Đã kết hôn</string>

    <string name="google_maps_key">AIzaSyAV0KUe7FjGPo00nZ_59S1-wFJ-PAfzxs8</string>

    <string name="rationale_title">Permission required</string>
    <string name="rationale_message">we need permission for read <b>contact</b> and find your <b>location</b></string>

    <!--Login-->
    <string name="login_dummy">Đăng nhập</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login_error">Đăng nhập thất bại. Vui lòng kiểm tra thông tin của bạn.</string>
    <string name="login_error_warning">Cảnh báo</string>

    <!--empty state-->
    <string name="forgot_password_button">Lấy lại mật khẩu</string>
    <string name="forgot_password_label">Quên mật khẩu</string>
    <string name="sign_up_label">Đăng ký</string>
</resources>
