<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/item_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/setting_code_gmg"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tvGMG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="000000"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/header_bar_padding"
                    android:textStyle="bold" />
            </LinearLayout>

            <include layout="@layout/menu_group_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/item_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:fontFamily="sans-serif-light"
                    android:text="Thu nhỏ màn hình khóa"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_normal" />

                <Switch
                    android:id="@+id/swHaftScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/component_margin"
                    android:theme="@style/BrandedSwitch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/item_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/setting_showlock_screen_wifi"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_normal" />

                <Switch
                    android:id="@+id/swWifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/component_margin"
                    android:theme="@style/BrandedSwitch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/item_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/setting_showlock_screen_3g"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_normal" />

                <Switch
                    android:id="@+id/sw3G"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/component_margin"
                    android:theme="@style/BrandedSwitch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/item_padding"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/setting_reward_notice"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_normal" />

                <Switch
                    android:id="@+id/sw_reward_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/component_margin"
                    android:theme="@style/BrandedSwitch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/item_padding"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/setting_event_facebook"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_normal" />

                <Switch
                    android:id="@+id/sw_event_facebook_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/component_margin"
                    android:theme="@style/BrandedSwitch" />
            </LinearLayout>

            <include layout="@layout/menu_group_divider" />

            <TextView
                android:id="@+id/tv_my_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:visibility="gone"
                android:text="@string/setting_about_me"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_cash_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_cash_out"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_point_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_point_history"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_invite_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_invite_fr"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_invite_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_invite_code"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_hobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_hobby"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_game"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/menu_group_divider" />

            <TextView
                android:id="@+id/tv_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_attention"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_qa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_qa"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_tutorial"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal"
                android:visibility="gone" />

            <include layout="@layout/menu_group_divider" />

            <TextView
                android:id="@+id/tv_customer_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_customer_service"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_contact"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_term_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_term_use"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_voucher_term_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/voucher_policy"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_security_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_security_policy"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/menu_group_divider" />

            <TextView
                android:id="@+id/tv_delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/item_padding"
                android:text="@string/setting_delete_account"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_normal"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>